k8s/deployments/local/api-gateway.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: api-gateway-svc
  name: api-gateway-svc
spec:
  replicas: 3
  selector:
    matchLabels:
      run: api-gateway-svc
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: api-gateway-svc
    spec:
      containers:
      - name: api-gateway-svc
        image: wesduff/microservices:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: api-gateway-svc
  name: api-gateway-svc
spec:
  selector:
    run: api-gateway-svc
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  sessionAffinity: None
  type: LoadBalancer
