k8s/deployments/local/sports_local.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: sports-svc
  name: sports-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      run: sports-svc
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: sports-svc
    spec:
      containers:
      - name: sports-svc
        image: node/sports:vMongoDb
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: sports-svc
  name: sports-svc
spec:
  selector:
    run: sports-svc
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
  sessionAffinity: None
  type: ClusterIP
